--- a/languages/moelog-ai-qna-zh_TW.po
+++ b/languages/moelog-ai-qna-zh_TW.po
@@ -1623,3 +1623,95 @@ msgstr "✓ 自動 ping Google/Bing"
 msgid "⚠️ 啟用/停用後,請到 設定 → 永久連結 點「儲存變更」刷新規則。"
 msgstr "⚠️ 啟用/停用後,請到 設定 → 永久連結 點「儲存變更」刷新規則。"
 
+#: includes/class-admin-settings.php
+msgid "Show"
+msgstr "顯示"
+
+#: includes/class-admin-settings.php
+msgid "If set, the mask is displayed for security reasons; to replace it, please enter the new Key directly."
+msgstr "如已設定，出於安全僅顯示遮罩；要更換請直接輸入新 Key。"
+
+#: includes/class-admin-settings.php
+msgid "Suggestion:"
+msgstr "建議:"
+
+#: includes/class-admin-settings.php
+msgid "Defining MOELOG_AIQNA_API_KEY in wp-config.php is more secure."
+msgstr "在 wp-config.php 定義 MOELOG_AIQNA_API_KEY 更安全。"
+
+#: includes/class-admin-settings.php
+msgid "Code:"
+msgstr "代碼:"
+
+#: moelog-ai-geo.php
+msgid "Enable STM Mode"
+msgstr "啟用 STM 模式"
+
+#: moelog-ai-geo.php
+msgid "Provide structured data (QAPage, Breadcrumb), Canonical/Robots and cache strategies to help search and AI crawlers \"correctly parse\" AI answer pages."
+msgstr "提供結構化資料（QAPage、Breadcrumb）、Canonical/Robots 與快取策略，幫助搜尋與 AI 爬蟲「正確解析」AI 答案頁。"
+
+#: moelog-ai-geo.php
+msgid "This function does not guarantee indexing or ranking, default is noindex; index,follow is adopted only when STM mode is enabled, and corresponding metadata and Sitemap are output."
+msgstr "此功能不保證索引或排名，預設為 noindex；僅在啟用 STM 模式時採用 index,follow 並輸出對應中繼資料與 Sitemap。"
+
+#: moelog-ai-geo.php
+msgid "Enable structured data, SEO optimization and AI Sitemap"
+msgstr "啟用結構化資料、SEO 優化與 AI Sitemap"
+
+#: moelog-ai-geo.php
+msgid "After enabling, this (STM) module will:"
+msgstr "啟用後, 本(STM)模組將會:"
+
+#: moelog-ai-geo.php
+msgid "Inject `index, follow` (replace default `noindex`)"
+msgstr "注入 `index, follow` (取代預設的 `noindex`)"
+
+#: moelog-ai-geo.php
+msgid "Inject QAPage / Breadcrumb / OG / Twitter Card Meta Tags"
+msgstr "注入 QAPage / Breadcrumb / OG / Twitter Card 等 Meta 標籤"
+
+#: moelog-ai-geo.php
+msgid "Inject Canonical Tag (point to **original article**)"
+msgstr "注入 Canonical 標籤 (指向**原始文章**)"
+
+#: moelog-ai-geo.php
+msgid "Output friendly CDN HTTP cache headers (ETag, 304, Last-Modified)"
+msgstr "輸出友善 CDN 的 HTTP 快取標頭 (ETag, 304, Last-Modified)"
+
+#: moelog-ai-geo.php
+msgid "Generate AI Q&A dedicated Sitemap (index + pagination)"
+msgstr "產生 AI 問答專用 Sitemap(index+分頁)"
+
+#: moelog-ai-geo.php
+msgid "Automatically ping Google/Bing"
+msgstr "自動 ping Google/Bing"
+
+#: moelog-ai-geo.php
+msgid "AI Q&A Sitemap:"
+msgstr "AI 問答 Sitemap:"
+
+#: moelog-ai-geo.php
+msgid "⚠️ After enabling/disabling, please go to"
+msgstr "⚠️ 啟用/停用後,請到"
+
+#: moelog-ai-geo.php
+msgid "Settings → Permalinks"
+msgstr "設定 → 永久連結"
+
+#: moelog-ai-geo.php
+msgid "Click \"Save Changes\" to refresh rules."
+msgstr "點「儲存變更」刷新規則。"
+
+#: includes/class-admin.php
+msgid "Markdown Support: Introduced Parsedown to correctly convert Markdown before rendering answers."
+msgstr "Markdown 支援: 引入 Parsedown，在答案渲染前正確轉換 Markdown。"
+
+#: includes/class-admin.php
+msgid "Style Fixes: Fixed answer page CSS to better support Markdown content."
+msgstr "樣式修正: 修正回答頁的CSS，配合 Markdown 的內容。"
+
+#: includes/class-admin.php
+msgid "UI Redesign: Admin interface redesigned with a clean, elegant style."
+msgstr "UI 重新設計: 後台管理介面採用素雅風格設計。"
+
